--- a/package.json
+++ b/package.json
@@ -3,10 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "axios": "^1.8.4",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.56.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "repository": {
     "type": "git",
