--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "axios": "^1.8.4",
+    "chart.js": "^4.5.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.18.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
