--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "repository": {
