added the lab test

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "axios": "^1.8.4",
     "chart.js": "^4.5.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.18.1",
+    "lucide-react": "^0.523.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^4.8.0",
